--- a/UDTAndroid/res/values/strings.xml
+++ b/UDTAndroid/res/values/strings.xml
@@ -25,7 +25,7 @@
     <string name="trackbutton">Track</string>
     <string name="latin">Lorem ipsum ad his scripta blandit partiendo, eum fastidii accumsan euripidis in, eum liber hendrerit an. Qui ut wisi vocibus suscipiantur, quo dicit ridens inciderint id. Quo mundi lobortis reformidans eu, legimus senserit definiebas an eos. Eu sit tincidunt incorrupte definitionem, vis mutat affert percipit cu, eirmod consectetuer signiferumque eu per. In usu latine equidem dolores. Quo no falli viris intellegam, ut fugit veritus placerat per.</string>
     <string name="sharetext">Enviar Posición</string>
-    <string name="my_pos_text">Hola, te envio mis coordenadas :</string>
+    <string name="my_pos_text">Estoy en :</string>
     <string name="invitado">Invitado</string>
     <string name="config_title">CONFIGURACIÓN</string>
     <string name="trackmypos">Reportar mi posición</string>
